Fix styling for navbar on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,6 @@ br {
     #list {
         list-style-type: none;
         float: right;
-        margin-right: 15px;
         letter-spacing: 0px;
     }
     #logo {
